fixed navigation bar + main body overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body{
 }
 
 #header-img{
-  width:15%;
+  height=5rem;
 }
 
 header {
